tests/mut_func_arg_case_coercion.test
type Foo = [`A int];
let f = fun Foo `A x -> x;
####
SyntaxError: Coercions are not allowed in function argument patterns.
type Foo = [`A int];
let f = fun Foo `A x -> x;
            ^~~
